tr(cleanup): useless code cleanup (#946)
- tr(cleanup): remove wro4j references
- tr(cleanup): remove unused test file loginManager-config.properties
- tr(cleanup): remove unused tomcat test files
- tr(cleanup): clean test users at end of tests

JIRA [RUNTIME-1387](https://bonitasoft.atlassian.net/browse/RUNTIME-1387) and [RUNTIME-1388](https://bonitasoft.atlassian.net/browse/RUNTIME-1388)